# simple-work-queue

./: .gitignore  README.md  pyproject.toml
.github/actions/python-build-test/: action.yaml
.github/workflows/: python-build-test-workflow.yaml  python-package.yml  python-publish-prod.yml  python-publish.yml
src/simple_work_queue/: queue_consumer.py  queue_producer.py  queue_publisher.py
tests/: test_import.py  test_spool_queue.py
