[tool.poetry]
name = "simple-work-queue"
version = "0.1.0"
description = "Publish to and consume from work queues"
authors = ["Jason Luther <jason@ixid.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
